// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tree /> create tree component 1`] = `
<div>
  <div
    className="fd-tree fd-tree--header"
  >
    <div
      className="fd-tree__row fd-tree__row--header"
    >
      <div
        className="fd-tree__col fd-tree__col--control"
      >
        <div>
          <button
            aria-label="expand"
            aria-pressed={false}
            className="fd-tree__control"
            onClick={[Function]}
          />
          Column Header 1
        </div>
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 2
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 3
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 4
      </div>
    </div>
  </div>
  <ul
    aria-hidden={true}
    className="fd-tree is-hidden"
    role="tree"
  >
    <li
      aria-expanded="true"
      className="fd-tree__item"
      id="cnqr-1"
      role="treeitem"
    >
      <div
        className="fd-tree__row"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-controls="cnqr-1"
              aria-label="expand"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            First Level
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 2
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 3
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 4
        </div>
      </div>
      <ul
        aria-hidden={true}
        className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
        role="group"
      >
        <li
          aria-expanded="true"
          className="fd-tree__item"
          id="cnqr-2"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              <div>
                <button
                  aria-controls="cnqr-2"
                  aria-label="expand"
                  aria-pressed={false}
                  className="fd-tree__control"
                  onClick={[Function]}
                />
                Child 1
              </div>
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 3
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 4
            </div>
          </div>
          <ul
            aria-hidden={true}
            className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
            role="group"
          >
            <li
              aria-expanded="true"
              className="fd-tree__item"
              id="cnqr-3"
              role="treeitem"
            >
              <div
                className="fd-tree__row"
              >
                <div
                  className="fd-tree__col fd-tree__col--control"
                >
                  <div>
                    <button
                      aria-controls="cnqr-3"
                      aria-label="expand"
                      aria-pressed={false}
                      className="fd-tree__control"
                      onClick={[Function]}
                    />
                    Grandchild 1
                  </div>
                </div>
                <div
                  className="fd-tree__col"
                >
                  Data Col 2
                </div>
                <div
                  className="fd-tree__col"
                >
                  Data Col 3
                </div>
                <div
                  className="fd-tree__col"
                >
                  Data Col 4
                </div>
              </div>
              <ul
                aria-hidden={true}
                className="fd-tree__group fd-tree__group--sublevel-3 is-hidden"
                role="group"
              >
                <li
                  aria-expanded="true"
                  className="fd-tree__item"
                  id="cnqr-4"
                  role="treeitem"
                >
                  <div
                    className="fd-tree__row"
                  >
                    <div
                      className="fd-tree__col fd-tree__col--control"
                    >
                      GreatGrandchild 1
                    </div>
                    <div
                      className="fd-tree__col"
                    >
                      Data Col 2
                    </div>
                    <div
                      className="fd-tree__col"
                    >
                      Data Col 3
                    </div>
                    <div
                      className="fd-tree__col"
                    >
                      Data Col 4
                    </div>
                  </div>
                </li>
              </ul>
            </li>
          </ul>
        </li>
        <li
          aria-expanded="true"
          className="fd-tree__item"
          id="cnqr-5"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              Child 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 3
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 4
            </div>
          </div>
        </li>
      </ul>
    </li>
    <li
      aria-expanded="true"
      className="fd-tree__item"
      id="cnqr-6"
      role="treeitem"
    >
      <div
        className="fd-tree__row"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-controls="cnqr-6"
              aria-label="expand"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            Row 2
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 2
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 3
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 4
        </div>
      </div>
      <ul
        aria-hidden={true}
        className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
        role="group"
      >
        <li
          aria-expanded="true"
          className="fd-tree__item"
          id="cnqr-7"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              Child 1
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 3
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 4
            </div>
          </div>
        </li>
        <li
          aria-expanded="true"
          className="fd-tree__item"
          id="cnqr-8"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              Child 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 3
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 4
            </div>
          </div>
        </li>
      </ul>
    </li>
    <li
      aria-expanded="true"
      className="fd-tree__item"
      id="cnqr-9"
      role="treeitem"
    >
      <div
        className="fd-tree__row"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          Row 3
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 2
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 3
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 4
        </div>
      </div>
    </li>
    <li
      aria-expanded="true"
      className="fd-tree__item"
      id="cnqr-10"
      role="treeitem"
    >
      <div
        className="fd-tree__row"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-controls="cnqr-10"
              aria-label="expand"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            <a
              href="http://me.com"
            />
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 2
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 3
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 4
        </div>
      </div>
      <ul
        aria-hidden={true}
        className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
        role="group"
      >
        <li
          aria-expanded="true"
          className="fd-tree__item"
          id="cnqr-11"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              Child 1
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 3
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 4
            </div>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<Tree /> create tree component 2`] = `
<div>
  <div
    className="fd-tree fd-tree--header"
  >
    <div
      className="fd-tree__row fd-tree__row--header"
    >
      <div
        className="fd-tree__col fd-tree__col--control"
      >
        <div>
          <button
            aria-label="expand"
            aria-pressed={false}
            className="fd-tree__control"
            onClick={[Function]}
          />
          Column Header 1
        </div>
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 2
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 3
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 4
      </div>
    </div>
  </div>
  <ul
    aria-hidden={true}
    className="fd-tree is-hidden"
    role="tree"
  >
    <li
      aria-expanded="true"
      className="fd-tree__item"
      id="cnqr-12"
      role="treeitem"
    >
      <div
        className="fd-tree__row"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-controls="cnqr-12"
              aria-label="expand"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            First Level
          </div>
        </div>
      </div>
      <ul
        aria-hidden={true}
        className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
        role="group"
      >
        <li
          aria-expanded="true"
          className="fd-tree__item"
          id="cnqr-13"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              <div>
                <button
                  aria-controls="cnqr-13"
                  aria-label="expand"
                  aria-pressed={false}
                  className="fd-tree__control"
                  onClick={[Function]}
                />
                <a
                  href="http://me.com"
                >
                  First Level
                </a>
              </div>
            </div>
            <div
              className="fd-tree__col"
            />
            <div
              className="fd-tree__col"
            />
            <div
              className="fd-tree__col"
            />
          </div>
          <ul
            aria-hidden={true}
            className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
            role="group"
          >
            <li
              aria-expanded="true"
              className="fd-tree__item"
              id="cnqr-14"
              role="treeitem"
            >
              <div
                className="fd-tree__row"
              >
                <div
                  className="fd-tree__col fd-tree__col--control"
                >
                  <a
                    href="http://amazon.com"
                  >
                    Amazon
                  </a>
                </div>
                <div
                  className="fd-tree__col"
                >
                  <a
                    href="http://google.com"
                  >
                    Google
                  </a>
                </div>
                <div
                  className="fd-tree__col"
                >
                  <a
                    href="http://bing.com"
                  >
                    Bing
                  </a>
                </div>
                <div
                  className="fd-tree__col"
                >
                  <a
                    href="http://yahoo.com"
                  >
                    Yahoo
                  </a>
                </div>
                <div
                  className="fd-tree__col"
                >
                  <a
                    href="http://sap.com"
                  >
                    SAP
                  </a>
                </div>
              </div>
            </li>
            <li
              aria-expanded="true"
              className="fd-tree__item"
              id="cnqr-15"
              role="treeitem"
            >
              <div
                className="fd-tree__row"
              >
                <div
                  className="fd-tree__col fd-tree__col--control"
                >
                  <a
                    href="http://amazon.com"
                  >
                    Amazon
                  </a>
                </div>
              </div>
            </li>
          </ul>
        </li>
        <li
          aria-expanded="true"
          className="fd-tree__item"
          id="cnqr-16"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              <div>
                <button
                  aria-controls="cnqr-16"
                  aria-label="expand"
                  aria-pressed={false}
                  className="fd-tree__control"
                  onClick={[Function]}
                />
                Second Level
              </div>
            </div>
            <div
              className="fd-tree__col"
            />
            <div
              className="fd-tree__col"
            />
            <div
              className="fd-tree__col"
            />
          </div>
          <ul
            aria-hidden={true}
            className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
            role="group"
          >
            <li
              aria-expanded="true"
              className="fd-tree__item"
              id="cnqr-17"
              role="treeitem"
            >
              <div
                className="fd-tree__row"
              >
                <div
                  className="fd-tree__col fd-tree__col--control"
                >
                  <a
                    href="http://amazon.com"
                  >
                    Amazon
                  </a>
                </div>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
